appId: dev.noboil.chat
---
- runFlow: login.yaml

- assertVisible: "Chats"

- tapOn:
    text: "plus"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "New Chat"
    timeout: 15000
- tapOn:
    text: "New Chat"
    index: 0
- waitForAnimationToEnd

- tapOn: "Message..."
- inputText: "Toggle public test message"
- tapOn:
    id: "sendButton"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Toggle public test message"
    timeout: 15000

- tapOn:
    id: "togglePublic"
- waitForAnimationToEnd

- tapOn:
    id: "togglePublic"
- waitForAnimationToEnd

- back
- waitForAnimationToEnd
- assertVisible: "Chats"
