appId: dev.noboil.chat
---
- runFlow: login.yaml

- assertVisible: "Chats"

- tapOn:
    text: "plus"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "New Chat"
    timeout: 15000

- tapOn:
    text: "New Chat"
    index: 0
- waitForAnimationToEnd
- assertVisible: "Chat"
- assertVisible: "Message..."

- tapOn: "Message..."
- inputText: "Clear test message"
- tapOn:
    id: "sendButton"
- waitForAnimationToEnd

- extendedWaitUntil:
    visible: "Clear test message"
    timeout: 15000

- assertVisible: "Message..."
