appId: dev.noboil.chat
---
- runFlow: login.yaml

- assertVisible: "Chats"

- tapOn:
    text: "plus"
- waitForAnimationToEnd
- tapOn:
    text: "New Chat"
    index: 0
- waitForAnimationToEnd
- assertVisible: "Chat"
- assertVisible: "Message..."

- tapOn: "Message..."
- inputText: "Hello world test message"
- tapOn:
    id: "sendButton"
- extendedWaitUntil:
    visible: "Hello world test message"
    timeout: 15000
- assertVisible: "Hello world test message"

- tapOn: "Message..."
- inputText: "Another test reply"
- tapOn:
    id: "sendButton"
- extendedWaitUntil:
    visible: "Another test reply"
    timeout: 15000
- assertVisible: "Hello world test message"
- assertVisible: "Another test reply"
