appId: dev.noboil.chat
---
- runFlow: login.yaml

- assertVisible: "Chats"

- tapOn:
    text: "plus"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "New Chat"
    timeout: 15000

- tapOn:
    text: "New Chat"
    index: 0
- waitForAnimationToEnd
- assertVisible: "Chat"

- tapOn: "Message..."
- inputText: "Message in first chat"
- tapOn:
    id: "sendButton"
- extendedWaitUntil:
    visible: "Message in first chat"
    timeout: 15000

- back
- waitForAnimationToEnd
- assertVisible: "Chats"

- tapOn:
    text: "plus"
- waitForAnimationToEnd
- tapOn:
    text: "New Chat"
    index: 0
- waitForAnimationToEnd

- tapOn: "Message..."
- inputText: "Message in second chat"
- tapOn:
    id: "sendButton"
- extendedWaitUntil:
    visible: "Message in second chat"
    timeout: 15000

- back
- waitForAnimationToEnd
- assertVisible: "Chats"
