appId: dev.noboil.blog
---
- clearState
- launchApp
- waitForAnimationToEnd

- assertVisible: "Welcome Back"
- assertVisible: "Sign in with Google"

- tapOn: "Sign in with Google"
- waitForAnimationToEnd:
    timeout: 3000

- repeat:
    times: 5
    commands:
      - pressKey: back

- launchApp:
    appId: dev.noboil.blog
    clearState: false

- extendedWaitUntil:
    visible: "Welcome Back"
    timeout: 10000
- assertVisible: "Sign in with Google"
- assertVisible: "Email"
- assertVisible: "Password"

- tapOn: "Sign Up"
- waitForAnimationToEnd
- assertVisible: "Create Account"
- tapOn: "Email"
- inputRandomEmail
- tapOn: "Password"
- inputText: "maestrotest123"
- hideKeyboard
- tapOn:
    text: "Sign Up"
    index: 1
- extendedWaitUntil:
    visible: "Blog"
    timeout: 15000
- assertVisible: "Posts"
