appId: dev.noboil.blog
tags:
  - helper
---
- clearState
- launchApp
- waitForAnimationToEnd
- assertVisible: "Welcome Back"
- tapOn: "Sign Up"
- waitForAnimationToEnd
- assertVisible: "Create Account"
- tapOn: "Email"
- inputRandomEmail
- tapOn: "Password"
- inputText: "maestrotest123"
- hideKeyboard
- tapOn:
    text: "Sign Up"
    index: 1
- extendedWaitUntil:
    visible: "Blog"
    timeout: 15000
